--- a/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-confirm.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-confirm.html
@@ -86,8 +86,6 @@
             $("#submitBtn").click(function(){
                 $("#confirmForm").submit();
             });
-
-
         });
 
     </script>
@@ -201,7 +199,7 @@
                     <div class="panel-footer" style="text-align:center;">
                         <!--<button type="button" class="btn  btn-default btn-lg" onclick="window.location.href='start-step-2.html'">上一步</button>-->
                         <button id="submitBtn" type="button" class="btn  btn-warning btn-lg">提交</button>
-                        <a class="btn" > 保存草稿 </a>
+                        <!--<a class="btn" > 保存草稿 </a>-->
                     </div>
                 </div>
             </div>
