--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/member-login.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/member-login.html
@@ -40,20 +40,20 @@
                                 $("#login_acct_div").removeClass("has-success").addClass("has-error");
                                 $("#acct_reminder").removeAttr("hidden").append(message);
                                 $("#login_userpswd_div").removeClass("has-success").addClass("has-error");
-                            } else {
-                                if (code == "200") { //密码错误
-                                    $("#login_acct_div").removeClass("has-error").addClass("has-success");
-                                    $("#login_userpswd_div").removeClass("has-success").addClass("has-error");
-                                    $("#pswd_reminder").removeAttr("hidden").append(message);
-                                } else {
-                                    if (code == "300") { //服务器问题
-                                        layer.msg("服务器出现故障！维修小哥正在抢修！", {
-                                            icon: 5,
-                                            time: 4000,
-                                            btn: ['知道了', '关闭']
-                                        });
-                                    }
-                                }
+                            } else if (code == "200") { //密码错误
+                                $("#login_acct_div").removeClass("has-error").addClass("has-success");
+                                $("#login_userpswd_div").removeClass("has-success").addClass("has-error");
+                                $("#pswd_reminder").removeAttr("hidden").append(message);
+                            }else if (code == "300") {//服务器问题
+                                layer.msg("服务器出现故障！维修小哥正在抢修！", {
+                                    icon: 5,
+                                    time: 4000,
+                                    btn: ['知道了', '关闭']
+                                });
+                            }else if (code=="400") { //账号异常
+                                $("#login_acct_div").removeClass("has-success").addClass("has-error");
+                                $("#acct_reminder").removeAttr("hidden").append(message);
+                                $("#login_userpswd_div").removeClass("has-success").addClass("has-error");
                             }
                         }
                     },
