--- a/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-all.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-all.html
@@ -184,7 +184,7 @@
                                 <span class="class2 label-status" spanval="100">全部</span>
                                 <span class="class2 label-text" spanval="0">即将开始</span>
                                 <span class="class2 label-text" spanval="1">众筹中</span>
-                                <span class="class2 label-text" spanval="3">众筹成功</span>
+                                <span class="class2 label-text" spanval="2">众筹成功</span>
                             </li>
                             <li id="li3">
                                 排序：
@@ -239,20 +239,27 @@
                                 </p>
                                 <br>
                                 <div class="progress" style="margin-bottom: 4px;">
-                                    <div th:if="${project.supportmoney!=0}" class="progress-bar progress-bar-success" role="progressbar"
-                                         th:aria-valuenow="${project.money / project.supportmoney}" aria-valuenow="40"
+                                    <div  th:if="${project.supportmoney  * 100 / project.money <100}" class="progress-bar progress-bar-success" role="progressbar"
+                                         th:aria-valuenow="${project.supportmoney * 100 / project.money }" aria-valuenow="40"
                                          aria-valuemin="0" aria-valuemax="100"
-                                         th:style="'width:'+${project.money / project.supportmoney}+'%'"
+                                         th:style="'width:'+${project.supportmoney * 100 / project.money }+'%'"
                                          style="width: 40%">
-                                        <span th:text="${project.money / project.supportmoney}+'% '">40%</span>
+                                        <span th:text="${project.supportmoney  * 100 / project.money}+'% '">40%</span>
                                     </div>
-                                    <div th:if="${project.supportmoney==0}" class="progress-bar progress-bar-success" role="progressbar"
+                                    <div th:if="${project.supportmoney  * 100 / project.money >=100}" class="progress-bar progress-bar-success" role="progressbar"
+                                         th:aria-valuenow="100" aria-valuenow="40"
+                                         aria-valuemin="0" aria-valuemax="100"
+                                         th:style="'width:100%'"
+                                         style="width: 40%">
+                                        <span th:text="'100% '">40%</span>
+                                    </div>
+                                    <!--<div th:if="${project.supportmoney==0}" class="progress-bar progress-bar-success" role="progressbar"
                                          th:aria-valuenow="0" aria-valuenow="40"
                                          aria-valuemin="0" aria-valuemax="100"
                                          th:style="'width:0%'"
                                          style="width: 40%">
                                         <span th:text="'0% '">40%</span>
-                                    </div>
+                                    </div>-->
                                 </div>
                                 <div>
                                                     <span style="float:right;">
