--- a/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-supporter.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-supporter.html
@@ -59,10 +59,10 @@
             <div class="tree">
                 <ul style="padding-left:0px;" class="list-group">
                     <li class="list-group-item tree-closed">
-                        <a href="main.html"><i class="glyphicon glyphicon-dashboard"></i>项目面板</a>
+                        <span><i class="glyphicon glyphicon-dashboard"></i>项目面板</span>
                     </li>
                     <li class="list-group-item">
-                        <span><i class="glyphicon glyphicon glyphicon-tasks"></i> 项目管理 <span class="badge" style="float:right">3</span></span>
+                        <span><i class="glyphicon glyphicon glyphicon-tasks"></i> 项目管理 <span class="badge" style="float:right">1</span></span>
                         <ul style="margin-top:10px;">
                             <li style="height:30px;">
                                 <a href="#" style="color:red;"><i class="glyphicon glyphicon-user"></i> 支持者</a>
